fixed gap between the gradient and the footer on the commentary and archive pages

--- a/assets/_sass/pages/_post.scss
+++ b/assets/_sass/pages/_post.scss
@@ -201,7 +201,7 @@
         left: 100%;
         width: calc((100vw - 100%) / 2 - 1px);
         // prettier-ignore
-        background-image: linear-gradient(180deg, rgba(14, 26, 44, 0), rgba(14, 26, 44, 0.8) 80px, #081324 120px, #081324 95%, rgba(0, 11, 14, 0.01));
+        background-image: linear-gradient(180deg, rgba(14, 26, 44, 0), rgba(14, 26, 44, 0.8) 80px, #081324 120px, #081324 97.7%, rgba(0, 11, 14, 0.01));
       }
 
       @include breakpoint('large') {
